# slicer3d_module

./: CMakeLists.txt  README.md
Module/: CMakeLists.txt  Module.py
